k8s-app/go-demo/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-demo-preview
  labels:
    app: go-demo
spec:
  type: ClusterIP
  selector:
    app: go-demo
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
